<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-image-sandbox</artifactId>
  <version>1.0.8</version>

  <name>Vavi Imaging Sandbox API</name>
  <organization>
    <name>vavi</name>
  </organization>
  <url>httpa://github.com/umjammer/vavi-image-sandbox</url>
  <description>
    TODO

    jpeg cimd?
    smilla enlarge
  </description>
  <scm>
    <url>httpa://github.com/umjammer/vavi-image-sandbox</url>
  </scm>
  <issueManagement>
    <url>httpa://github.com/umjammer/vavi-image-sandbox/issues</url>
  </issueManagement>

  <properties>
    <native.prefix>/usr/local</native.prefix>
  </properties>

  <profiles>
    <profile>
      <id>mac arm64</id>
      <activation>
        <os>
          <family>mac</family>
          <arch>aarch64</arch>
        </os>
      </activation>
      <properties>
        <native.prefix>/opt/homebrew</native.prefix>
      </properties>
    </profile>

    <profile>
      <id>local (not on jitpack)</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
        <property>
          <name>env.JITPACK</name>
          <value>!true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.5</version>
            <configuration>
              <trimStackTrace>false</trimStackTrace>
              <argLine>
                --add-opens java.desktop/sun.java2d=ALL-UNNAMED
                -Djava.library.path=${native.prefix}/lib:${project.build.testOutputDirectory}
                -Djna.library.path=${native.prefix}/lib:${project.build.testOutputDirectory}
                -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
              </argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <!-- mvn -P magick antrun:run [-Dmagick='file'] -->
      <id>magick</id>
      <build>
        <plugins>
          <plugin>
            <!-- GOOD: fork: OK, test jars: OK, user args, default args: OK -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.1.0</version>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <java classname="ImageMagickFilter" fork="true">
                  <classpath>
                    <path refid="maven.compile.classpath"/>
                    <path refid="maven.test.classpath"/>
                  </classpath>
                  <jvmarg
                      value="-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties"/>
                  <jvmarg value="-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf"/>
                  <jvmarg value="-Dapple.laf.useScreenMenuBar=true"/>
                  <jvmarg
                      value="-Dapple.awt.application.name=この世の深淵を覗いたとき、僕たちは明日を照らすはずの神が可能性の涙を見誤っていることを知り、絶望することさえも許されずただ彷徨い続ける。"/>
                  <jvmarg value="-Djna.library.path=${native.prefix}/lib:/usr/local/lib"/>
                  <jvmarg value="-DImageMagickFilter.path=${native.prefix}/bin"/>
                </java>
              </target>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <!-- mvn -P wmr antrun:run -Dwmr='file' -Dext='jpg' -->
      <id>wmr</id>
      <activation>
        <property>
          <name>wmr</name>
          <value/>
        </property>
      </activation>
      <properties>
        <ext>jpg</ext>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.1.0</version>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <java classname="WaterMarkRemover" fork="true">
                  <classpath>
                    <path refid="maven.compile.classpath"/>
                    <path refid="maven.test.classpath"/>
                  </classpath>
                  <jvmarg value="-Xmx3G"/>
                  <jvmarg
                      value="-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties"/>
                  <jvmarg value="-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf"/>
                  <jvmarg value="-Dapple.laf.useScreenMenuBar=true"/>
                  <jvmarg value="-Dapple.awt.application.name=ImageMagickFilter"/>
                  <jvmarg value="-Djna.library.path=${native.prefix}/lib"/>
                  <arg value="${wmr}"/>
                  <arg value="${wmr}_new"/>
                  <arg value="${ext}"/>
                  <arg value="${ext}"/>
                </java>
              </target>
            </configuration>
          </plugin>

        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.desktop/sun.java2d=ALL-UNNAMED</arg>
            <arg>--add-modules</arg>
            <arg>java.logging</arg>
            <arg>--add-modules</arg>
            <arg>java.desktop</arg>
            <arg>--add-modules</arg>
            <arg>java.xml</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.14.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository> <!-- for jai-codec -->
      <id>jboss thirdparty</id>
      <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
    </repository>
    <repository> <!-- for jogl -->
      <id>clojars</id>
      <url>https://repo.clojars.org/</url>
    </repository>
    <repository> <!-- for vavi-image-enlarge-noids -->
      <id>gitlab-maven</id>
      <url>https://gitlab.com/api/v4/projects/39904024/packages/maven</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.16</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-image</artifactId>
      <version>1.0.15</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer -->
      <artifactId>vavi-commons-sandbox</artifactId>
      <version>0.4.7</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.rococoa</groupId> <!-- org.rococoa / com.github.umjammer.rococoa -->
      <artifactId>rococoa-cocoa</artifactId>
      <version>0.8.13</version>
    </dependency>
    <dependency>
      <groupId>com.singingbush </groupId>
      <artifactId>barcode4j</artifactId>
      <version>2.4.0</version>
    </dependency>

    <dependency>
      <groupId>avalon-framework</groupId>
      <artifactId>avalon-framework-api</artifactId>
      <version>4.3</version>
      <exclusions>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.mortennobel</groupId>
      <artifactId>java-image-scaling</artifactId>
      <version>0.8.6</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.5.0</version>
    </dependency>
    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-image-enlarge-noids</artifactId>
      <version>0.0.4</version>
    </dependency>

    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.5</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.16</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-awt</artifactId>
      <version>1.0.10</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.openpnp</groupId>
      <artifactId>opencv</artifactId>
      <version>4.9.0-0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>javacv-platform</artifactId>
      <version>1.5.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>jai-imageio-jpeg2000</artifactId>
      <version>1.3.1.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>javapng-spi</artifactId>
      <version>2.1.5</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.im4java</groupId>
      <artifactId>im4java</artifactId>
      <version>1.4.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- proposal -->
      <groupId>org.mp4parser</groupId>
      <artifactId>isoparser</artifactId>
      <version>1.9.56</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-image-webp</artifactId>
      <version>0.2.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.drewnoakes</groupId>
      <artifactId>metadata-extractor</artifactId>
      <version>2.19.0</version>
      <scope>test</scope>
    </dependency>
    <dependency> <!-- dylib is too old -->
      <groupId>net.java.dev.jogl</groupId>
      <artifactId>jogl-macosx-universal</artifactId>
      <version>1.1.1-rc6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.media</groupId>
      <artifactId>jai-codec</artifactId>
      <version>1.1.3</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
